restapp-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: 
  name: springboot
  namespace: easypay
spec:
  type: NodePort
  ports:
     - port: 8080
  selector:
    app: springboot
